@@ -31,6 +31,8 @@ ToDo/Notes:
 	  out.
 	- Use i_size_read() in fs/ntfs/attrib.c::ntfs_attr_set().
 	- Use i_size_read() in fs/ntfs/logfile.c::ntfs_{check,empty}_logfile().
+	- Use i_size_read() once and then use the cached value in
+	  fs/ntfs/lcnalloc.c::ntfs_cluster_alloc().
 
 2.1.22 - Many bug and race fixes and error handling improvements.
 
